apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__missing_entities-2.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": null
        },
        {
          "id": "2",
          "name": null
        },
        {
          "id": "3",
          "name": null
        }
      ]
    }
  },
  "errors": [
    {
      "message": "couldn't find mock for query {\"query\":\"query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { name } } }\",\"variables\":{\"representations\":[{\"id\":\"1\",\"__typename\":\"Organization\"},{\"id\":\"2\",\"__typename\":\"Organization\"},{\"id\":\"3\",\"__typename\":\"Organization\"}]}}",
      "path": [
        "currentUser",
        "allOrganizations",
        0
      ],
      "extensions": {
        "code": "FETCH_ERROR",
        "service": "orga"
      }
    },
    {
      "message": "couldn't find mock for query {\"query\":\"query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { name } } }\",\"variables\":{\"representations\":[{\"id\":\"1\",\"__typename\":\"Organization\"},{\"id\":\"2\",\"__typename\":\"Organization\"},{\"id\":\"3\",\"__typename\":\"Organization\"}]}}",
      "path": [
        "currentUser",
        "allOrganizations",
        1
      ],
      "extensions": {
        "code": "FETCH_ERROR",
        "service": "orga"
      }
    },
    {
      "message": "couldn't find mock for query {\"query\":\"query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { name } } }\",\"variables\":{\"representations\":[{\"id\":\"1\",\"__typename\":\"Organization\"},{\"id\":\"2\",\"__typename\":\"Organization\"},{\"id\":\"3\",\"__typename\":\"Organization\"}]}}",
      "path": [
        "currentUser",
        "allOrganizations",
        2
      ],
      "extensions": {
        "code": "FETCH_ERROR",
        "service": "orga"
      }
    }
  ]
}
